<resources>
    <string name="app_name">Yanapan</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="userpassword">User Password</string>
    <string name="title_activity_menu_p">MenuPActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu_top">User name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_visit">VisitActivity</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="hint_ID">DNI</string>
    <string name="hint_nombre">User</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_city">City</string>
    <string name="hint_distritct">Disctrict</string>
    <string name="hint_address">Address</string>
    <string name="hint_observation">Observation</string>
    <string name="hint_Type">Type</string>
    <string name="hint_ID2">ID</string>
    <string name="title_activity_menus">MenusActivity</string>
    <string name="name_work">Visitator</string>
    <string name="name">Juan Palacios</string>



</resources>
